--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 </head>
 
 <body>
+    <header>
+        <nav id='menu'>
+            <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
+            <ul>
+              <li><a href='http://'>Home</a></li>
+              <li><a class='dropdown-arrow' href='http://'>Serviços</a>
+                <ul class='sub-menus'>
+                  <li><a href='http://'>Products 1</a></li>
+                  <li><a href='http://'>Products 2</a></li>
+                  <li><a href='http://'>Products 3</a></li>
+                  <li><a href='http://'>Products 4</a></li>
+                </ul>
+              </li>
+              <li><a href='http://'>Sobre</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <h1>Cadastro de cliente</h1>
     <div class="formulario-group">
@@ -98,6 +115,14 @@
         <a href="#" class="buttonClass">Enviar</a>
     </button>
     
+
+
+
+
+
+
+
+
 
 
 </body>
